--- a/src/main/resources/com/example/ismoney/Login.fxml
+++ b/src/main/resources/com/example/ismoney/Login.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="491.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.LoginController">
+<AnchorPane prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.LoginController">
     <children>
-        <Pane fx:id="backgroundPanel" layoutY="-4.0" prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #FFFFFF, #63DBF3);">
+        <Pane fx:id="backgroundPanel" layoutY="-4.0" prefHeight="658.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #FFFFFF, #63DBF3);">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
@@ -16,57 +22,65 @@
                 <ColorAdjust />
             </effect>
             <children>
-                <VBox alignment="CENTER" layoutX="290.0" layoutY="81.0" prefHeight="337.0" prefWidth="200.0">
+                <VBox alignment="CENTER" layoutX="300.0" layoutY="135.0" prefHeight="390.0" prefWidth="300.0">
                     <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="201.0" style="-fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 25;" text="IsMoney" textAlignment="CENTER" textFill="#9c008c">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="201.0" style="-fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 28;" text="IsMoney" textAlignment="CENTER" textFill="#9c008c">
                             <VBox.margin>
-                                <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
+                                <Insets bottom="15.0" left="5.0" right="5.0" top="5.0" />
                             </VBox.margin>
                         </Label>
                         <TextField fx:id="emailOrUsernameField" prefHeight="30.0" prefWidth="200.0" promptText="Email/Username" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
                             <font>
-                                <Font name="Segoe UI" size="12.0" />
+                                <Font name="Segoe UI" size="13.0" />
                             </font>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
                             </VBox.margin>
                             <padding>
-                                <Insets bottom="4.0" left="10.0" top="4.0" />
+                                <Insets bottom="5.0" left="12.0" top="5.0" />
                             </padding>
                         </TextField>
                         <PasswordField fx:id="passwordField" prefHeight="30.0" prefWidth="200.0" promptText="Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
                             <font>
-                                <Font name="Segoe UI" size="12.0" />
+                                <Font name="Segoe UI" size="13.0" />
                             </font>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
                             </VBox.margin>
                             <padding>
-                                <Insets bottom="4.0" left="10.0" top="4.0" />
+                                <Insets bottom="5.0" left="12.0" top="5.0" />
                             </padding>
                         </PasswordField>
                         <Label fx:id="errorMessage" text="" textFill="RED" visible="false" wrapText="true">
                             <font>
-                                <Font size="12.0" />
+                                <Font size="13.0" />
                             </font>
                         </Label>
                         <Label fx:id="successMessage" text="" textFill="GREEN" visible="false" wrapText="true">
                             <font>
-                                <Font size="12.0" />
+                                <Font size="13.0" />
                             </font>
                         </Label>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLogin" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-cursor: hand; -fx-font-size: 14px; -fx-background-radius: 7;" text="Masuk" textFill="WHITE">
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLogin" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-cursor: hand; -fx-font-size: 15px; -fx-background-radius: 7;" text="Masuk" textFill="WHITE">
                             <font>
-                                <Font name="Segoe UI" size="12.0" />
+                                <Font name="Segoe UI" size="13.0" />
                             </font>
                             <VBox.margin>
-                                <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
+                                <Insets bottom="12.0" left="5.0" right="5.0" top="5.0" />
                             </VBox.margin>
                         </Button>
-                        <HBox alignment="CENTER" prefHeight="13.0" prefWidth="156.0">
+                        <HBox alignment="CENTER" prefHeight="18.0" prefWidth="156.0">
                             <children>
-                                <Label prefHeight="16.0" prefWidth="116.0" style="-fx-font-family: Poppins;" text="Belum punya akun?" textFill="#5c5d5e" />
-                                <Label fx:id="signupLabel" onMouseClicked="#onSignupClick" style="-fx-font-family: Poppins; -fx-cursor: hand;" text="Daftar" textFill="#0f76dc" />
+                                <Label prefHeight="18.0" prefWidth="116.0" style="-fx-font-family: Poppins;" text="Belum punya akun?" textFill="#5c5d5e">
+                                    <font>
+                                        <Font size="13.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="signupLabel" onMouseClicked="#onSignupClick" style="-fx-font-family: Poppins; -fx-cursor: hand;" text="Daftar" textFill="#0f76dc">
+                                    <font>
+                                        <Font size="13.0" />
+                                    </font>
+                                </Label>
                             </children>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
