--- a/src/main/resources/com/example/ismoney/Register.fxml
+++ b/src/main/resources/com/example/ismoney/Register.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="491.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.IsMoneyController">
+<AnchorPane prefHeight="491.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.IsMoneyController">
    <children>
-      <Pane fx:id="backgroundPanel" layoutY="-4.0" prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #FFFFFF, #63DBF3);">
+      <Pane fx:id="backgroundPanel" layoutY="-4.0" prefHeight="650.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #FFFFFF, #63DBF3);">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -16,14 +22,14 @@
             <ColorAdjust />
          </effect>
          <children>
-            <VBox alignment="CENTER" layoutX="290.0" layoutY="81.0" prefHeight="337.0" prefWidth="200.0">
+            <VBox alignment="CENTER" layoutX="300.0" layoutY="130.0" prefHeight="390.0" prefWidth="300.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="201.0" style="-fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 25;" text="IsMoney" textAlignment="CENTER" textFill="#9c008c">
                      <VBox.margin>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="usernameField" prefHeight="25.0" prefWidth="190.0" promptText="Username" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
+                  <TextField fx:id="usernameField" prefHeight="30.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
