--- a/src/main/resources/com/example/ismoney/Dashboard.fxml
+++ b/src/main/resources/com/example/ismoney/Dashboard.fxml
@@ -62,6 +62,12 @@
          </font>
       </Button>
 
+      <Button fx:id="budgetButton" layoutX="450.0" layoutY="195.0" mnemonicParsing="false" onAction="#handleBudgetButton" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: #8c0093; -fx-cursor: hand; -fx-background-radius: 8;" text="Kelola Anggaran" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+
       <!-- Activity Log Panel -->
       <Pane layoutX="50.0" layoutY="250.0" prefHeight="320.0" prefWidth="800.0" style="-fx-background-color: #ffffff; -fx-background-radius: 15; -fx-drop-shadow: 0 4px 8px rgba(0,0,0,0.1);">
          <children>
